--- a/index.html
+++ b/index.html
@@ -3,5 +3,6 @@
 <body>
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
+<script async src="//radar.cedexis.com/1/1/radar.js"></script>
 </body>
 </html>
