--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html>
 <body>
 <h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-<script async src="//radar.cedexis.com/1/1/radar.js"></script>
+<p>I'm hosted with GitHub Pages.<script async src="//radar.cedexis.com/1/1/radar.js"></script></p>
 </body>
 </html>
